// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems|Molecules/Button/Base Large 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ lgzomW"
    onClick={[Function]}
  >
    <p
      className="sc-AxhUy hdaMzb"
    >
      click
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Base Medium 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ ehKCIm"
    onClick={[Function]}
  >
    <p
      className="sc-AxhUy hdaMzb"
    >
      click
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Base Small 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ fzJlpv"
    onClick={[Function]}
  >
    <p
      className="sc-AxhUy hdaMzb"
    >
      click
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Base Small Inverse 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ jIfvdX"
    onClick={[Function]}
  >
    <p
      className="sc-AxhUy hdaMzb"
    >
      click
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Cookie Base 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm iceKch"
  >
    <button
      className="sc-AxirZ kwHQpA"
      onClick={[Function]}
    >
      <p
        className="sc-AxhUy bFZbWA"
      >
        OK
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Cookie Inverse 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm iceKch"
  >
    <button
      className="sc-AxirZ gJMSw"
      onClick={[Function]}
    >
      <p
        className="sc-AxhUy fMVaqh"
      >
        Cookie Preferences
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Search Base 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ gwpFde"
    onClick={[Function]}
  >
    <div
      className="sc-AxjAm hZZDgA"
    >
      <div
        className="sc-AxiKw fCvwts"
      >
        <svg
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
      <p
        className="sc-AxhUy bRmETt"
      >
        Search
      </p>
    </div>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Dark Large 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm gfmURB"
  >
    <div
      className="sc-AxjAm kAPhWw"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxhCb dohgRM"
          src="darkcard-lg.png"
        />
      </div>
      <div
        className="sc-AxjAm bXaHUx"
      >
        <p
          className="sc-AxhUy ldUGOp"
        >
          Learn favorite summer recipes with celebrated chef Roze Traore
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Dark Medium 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm hFICtt"
  >
    <div
      className="sc-AxjAm kAPhWw"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxhCb dohgRM"
          src="darkcard-md.png"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhUy ldUGOp"
        >
          Fruits de mer with Michelin chef Marc Favier
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Dark Small 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm kUkfrO"
  >
    <div
      className="sc-AxjAm kAPhWw"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxhCb dohgRM"
          src="darkcard-sm.png"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhUy ldUGOp"
        >
          Fruits de mer with Michelin chef Marc Favier
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Light Multiple 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm bUwkzS"
  >
    <div
      className="sc-AxjAm ckXsfb"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxhCb dohgRM"
          src="card1.jpg"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhUy kneUdw"
        >
          Online experiences
        </p>
        <p
          className="sc-AxhUy gdeJho"
        >
          Unique activities we can do together, led by a world of hosts
        </p>
      </div>
    </div>
    <div
      className="sc-AxjAm ckXsfb"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxhCb dohgRM"
          src="card2.jpg"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhUy kneUdw"
        >
          Your next getaway
        </p>
        <p
          className="sc-AxhUy gdeJho"
        >
          Unplug or reconnect on a trip that's just a short drive away
        </p>
      </div>
    </div>
    <div
      className="sc-AxjAm ckXsfb"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxhCb dohgRM"
          src="card3.jpg"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhUy kneUdw"
        >
          Entire homes
        </p>
        <p
          className="sc-AxhUy gdeJho"
        >
          Comfortable private places, with room for friends or family
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Light Single With Title 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm htNMvP"
  >
    <div
      className="sc-AxjAm ckXsfb"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxhCb dohgRM"
          src="card1.jpg"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhUy kneUdw"
        >
          Online experiences
        </p>
        <p
          className="sc-AxhUy gdeJho"
        >
          Unique activities we can do together, led by a world of hosts
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Light Single Without Title 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm htNMvP"
  >
    <div
      className="sc-AxjAm ckXsfb"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxhCb dohgRM"
          src="card1.jpg"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhUy gdeJho"
        >
          Unique activities we can do together, led by a world of hosts
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Section Black Lives Matter 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm zwqux"
  >
    <div
      className="sc-AxjAm heQYgx"
    >
      <div
        className="sc-AxjAm eAyVbj"
      >
        <div
          className="sc-AxjAm hAsXji"
        >
          <div
            className="sc-AxjAm cocgVm"
          >
            We stand with #BlackLivesMatter
          </div>
          <div
            className="sc-AxjAm eeNAti"
          >
            We believe in a world where everyone belongs. We reject all racism that stands in the way.
          </div>
          <div
            className="sc-AxjAm hAnyuu"
          >
            Donate
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/SearchBar Mobile 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm fjaeUw"
  >
    <button
      className="sc-AxirZ gBUFfL"
      onClick={[Function]}
    >
      <div
        className="sc-AxgMl wTXyQ"
      >
        <div
          className="sc-AxiKw lahuVH"
        >
          <svg
            viewBox="0 0 56.966 56.966"
          >
            <path
              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
            />
          </svg>
        </div>
        <div
          className="sc-AxjAm gzylxM"
        >
          <p
            className="sc-AxhUy hdaMzb"
          >
            Where are you going?
          </p>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/SearchBar Normal 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ iAGYQN"
    onClick={[Function]}
  >
    <div
      className="sc-AxgMl lmkBdg"
    >
      <div
        className="sc-AxjAm tWoWx"
      >
        <p
          className="sc-AxhUy hdaMzb"
        >
          Start your search
        </p>
      </div>
      <div
        className="sc-AxjAm kornSO"
      >
        <div
          className="sc-AxiKw fgjXyA"
        >
          <svg
            viewBox="0 0 56.966 56.966"
          >
            <path
              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
            />
          </svg>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Organisms/Notification/Cookie Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm bkttMG"
  >
    <div
      className="sc-AxjAm icBPAH"
    >
      <div
        className="sc-AxjAm dycSZs"
      >
        <div
          className="sc-AxjAm ieaSbn"
        >
          <p
            className="sc-AxhUy hdaMzb"
          >
            We use cookies to help personalize content, tailor and measure ads, and provide a safer experience. By navigating the site, you agree to the use of cookies to collect information on and off Airbnb. Read our Cookie Policy to learn more or go to Cookie Preferences to manage your settings
          </p>
        </div>
        <div
          className="sc-AxjAm gTMHyH"
        >
          <div
            className="sc-AxjAm ivUTch"
          >
            <button
              className="sc-AxirZ kwHQpA"
              onClick={[Function]}
            >
              <p
                className="sc-AxhUy bFZbWA"
              >
                OK
              </p>
            </button>
            <button
              className="sc-AxirZ gJMSw"
              onClick={[Function]}
            >
              <p
                className="sc-AxhUy fMVaqh"
              >
                Cookie Preferences
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
